--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Lemonade</string>
     <string name="lemmon_tree">Lemmon Tree</string>
+    <string name="tap_the_lemon_tree">Tap the lemon tree to select a lemon\n</string>
 </resources>
