--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,10 @@
     <string name="app_name">Lemonade</string>
     <string name="lemmon_tree">Lemmon Tree</string>
     <string name="tap_the_lemon_tree">Tap the lemon tree to select a lemon\n</string>
+    <string name="keep_tapping_the_lemon_to_squeeze_it">Keep tapping the lemon to squeeze it\n</string>
+    <string name="tap_the_lemonade_to_drink_it">Tap the lemonade to drink it</string>
+    <string name="tap_the_empty_glass_to_start_again">Tap the empty glass to start again</string>
+    <string name="lemon">Lemon</string>
+    <string name="glass_of_lemonade">Glass of lemonade</string>
+    <string name="empty_glass">Empty glass</string>
 </resources>
